# PerfectJazz

./: .gitignore  .gitmodules  CMake.txt  CMakeLists.txt  CMakeLists_BACKUP_597.txt  CMakeLists_REMOTE_597.txt  README.md  bulletPool.h
PerfectJazz/: detecting_keys.cpp  entityPool.h  game.h  main.cpp  myContactListener.cpp  myContactListener.h  randomNumber.cpp  randomNumber.h  sBuffer_Queue.cpp  sound_Queue.h
PerfectJazz/background/: cmp_background.cpp  cmp_background.h  create_background.cpp  create_background.h
PerfectJazz/components/: .cmp_missile.h.swp  .cmp_missile_BASE_1914.h.swp  .cmp_missile_LOCAL_1914.h.swp  .cmp_missile_REMOTE_1914.h.swp  cmp_background_physics.cpp  cmp_background_physics.h  cmp_bullet.cpp  cmp_bullet.h  cmp_damage.cpp  cmp_damage.h  cmp_enemy_physics.cpp  cmp_enemy_physics.h  cmp_enemy_turret.cpp  cmp_health.cpp  cmp_health.h  cmp_hp.cpp  cmp_hp.h  cmp_hut_player.cpp  cmp_missile.cpp  cmp_missile.cpp.orig  cmp_missile.h  cmp_missile_BACKUP_1914.h  cmp_missile_LOCAL_1914.h  cmp_physics.cpp  cmp_physics.h  cmp_player_physics.cpp  cmp_player_physics.h  cmp_powerup_physics.cpp  cmp_powerup_physics.h  cmp_sound.cpp  cmp_sound.h  cmp_sprite.cpp  cmp_sprite.h  cmp_text.cpp  cmp_text.h  cmp_weapon.cpp  cmp_weapon.h  desktop.ini
PerfectJazz/enemies/: cmp_beserker.cpp  cmp_beserker.h  cmp_boss.cpp  cmp_boss.h  cmp_enemy.cpp  cmp_enemy.h  cmp_enemy_airman.cpp  cmp_enemy_airman.h  cmp_enemy_colonel.cpp  cmp_enemy_colonel.h  cmp_enemy_sergeant.cpp  cmp_enemy_sergeant.h  cmp_kamikaze.cpp  cmp_kamikaze.h  create_enemies.cpp  create_enemies.h  creates_enemies.cpp  creates_enemies.h  levelManager.cpp  levelManager.h  load_enemies.cpp  load_enemies.h
PerfectJazz/movement/: cmp_boss_move.cpp  cmp_boss_move.h  cmp_missile_movement.cpp  cmp_missile_movement.h  cmp_move_sine.cpp  cmp_move_sine.h  cmp_movement.cpp  cmp_movement.h  cmp_radar.cpp  cmp_radar.h
PerfectJazz/panels/: create_panels.cpp  create_panels.h  creates_panels.cpp  creates_panels.h
PerfectJazz/player/: cmp_player.cpp  cmp_player.h  create_player.cpp  create_player.h  creates_player.cpp  creates_player.h
PerfectJazz/pools/: New Text Document.txt  bulletPool.cpp  bulletPool.h  enemyPool.cpp  enemyPool.h  entityPool.cpp  entityPool.h  powerupPool.cpp  powerupPool.h
PerfectJazz/powerups/: cmp_powerup.cpp  cmp_powerup.h  creates_powerups.cpp  creates_powerups.h
PerfectJazz/scenes/: scene_credits.cpp  scene_credits.h  scene_level.cpp  scene_level.h  scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level2.h  scene_level3.cpp  scene_level3.h  scene_main_menu.cpp  scene_main_menu.h  scene_menu.cpp  scene_menu.h  scene_pause_menu.cpp  scene_pause_menu.h  scene_settings.cpp  scene_settings.h  scene_title.cpp  scene_title.h  scene_upgrade_menu.cpp  scene_upgrade_menu.h
PerfectJazz/services/: detecting_keys.cpp  detecting_keys.h  load_game.cpp  load_game.h  load_save_game.cpp  load_save_game.h  myContactListener.cpp  myContactListener.h  randomNumber.cpp  randomNumber.h  save_game.cpp  save_game.h  sound_Queue.h  sound_queue.cpp
PerfectJazz/settings/: background_settings.cpp  background_settings.h  bullet_settings.cpp  bullet_settings.h  collision_helper.h  enemy_settings.cpp  enemy_settings.h  level_settings.h  player_settings.cpp  player_settings.h  powerup_settings.cpp  powerup_settings.h  settings_holder.cpp  settings_holder.h  texture_helper_settings.cpp  texture_helper_settings.h  weapon_settings.cpp  weapon_settings.h
engine/: engine.cpp  engine.h  system_physics.cpp  system_renderer.cpp  system_renderer.h
lib/b2d/Box2D/: Building.txt  CMakeLists.txt
lib/b2d/Box2D/Testbed/Framework/: DebugDraw.cpp  Main.cpp  Test.h
lib/sfml/include/SFML/Audio/: AlResource.hpp  Export.hpp  InputSoundFile.hpp  Listener.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundFileReader.hpp  SoundFileWriter.hpp  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
lib/sfml/include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  Color.hpp  ConvexShape.hpp  Drawable.hpp  Export.hpp  Font.hpp  Glsl.hpp  Glsl.inl  Glyph.hpp  Image.hpp  PrimitiveType.hpp  Rect.hpp  Rect.inl  RectangleShape.hpp  RenderStates.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
lib/sfml/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
lib/sfml/include/SFML/System/: Clock.hpp  Err.hpp  Export.hpp  FileInputStream.hpp  InputStream.hpp  Lock.hpp  MemoryInputStream.hpp  Mutex.hpp  NativeActivity.hpp  NonCopyable.hpp  Sleep.hpp  String.hpp  String.inl  Thread.hpp  Thread.inl  ThreadLocal.hpp  ThreadLocalPtr.hpp  ThreadLocalPtr.inl  Time.hpp  Utf.hpp  Utf.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
lib/sfml/include/SFML/Window/: Clipboard.hpp  Context.hpp  ContextSettings.hpp  Cursor.hpp  Event.hpp  Export.hpp  GlResource.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp  VideoMode.hpp  Vulkan.hpp  Window.hpp  WindowBase.hpp  (+2 more)
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: LevelSystem.cpp  LevelSystem.h
res/levels/: level_2.txt  wave0.txt  wave1.txt  wave2.txt  wave3.txt  wave4.txt  wave5.txt  wave6.txt  wave7.txt  wave8.txt
(+147 files in other folders)
